# Ai-Geo

./: SRS.md  test_upload.csv
backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/src/geocare/: main.py
backend/src/geocare/application/use_cases/: audit.py  export.py  geography_refresh.py  processing.py  reporting.py  upload.py
backend/src/geocare/config/: container.py  database.py  logging.py  settings.py
backend/src/geocare/domain/entities/: audit.py  geography.py  job.py  record.py  user.py
backend/src/geocare/domain/ports/: geography.py  queue.py  repositories.py
backend/src/geocare/domain/value_objects/: address.py  audit.py  confidence.py  quality.py
backend/src/geocare/infrastructure/geography/: __init__.py  census_hierarchy.py  engine.py  locality_fuzzy.py  parser_adapter.py  pincode_index.py
backend/src/geocare/infrastructure/persistence/models/: __init__.py
backend/src/geocare/infrastructure/persistence/repositories/: __init__.py  audit_repo.py  chunk_repo.py  geography_repo.py  job_repo.py  postgis_repo.py  record_repo.py  user_repo.py  user_repo.py.bak
backend/src/geocare/infrastructure/queue/: __init__.py  celery_app.py  tasks.py
backend/src/geocare/infrastructure/security/: __init__.py  auth.py  encryption.py  jwt.py
backend/src/geocare/infrastructure/storage/: __init__.py
backend/src/geocare/presentation/api/: deps.py
backend/src/geocare/presentation/api/routes/: admin.py  auth.py  dashboard.py  exports.py  files.py  jobs.py  reports.py
backend/src/geocare/presentation/ws/: progress.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docker/scripts/: init-postgis.sql
docs/: ARCHITECTURE.md  DATABASE.md
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: page.tsx
frontend/src/app/(dashboard)/jobs/: page.tsx
frontend/src/app/(dashboard)/upload/: page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  select.tsx
frontend/src/lib/: api.ts
scripts/: init-postgis.sql
